sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: '=' expected but ';' found.
  for(i <-1 to getNombreValeurs() -2)
^